# poeten

./: Dockerfile  README.md
frontend/: Cargo.toml  index.css  index.html
frontend/src/: digte.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
server_axum/: Cargo.toml
server_axum/src/: main.rs
server_rocket/: Cargo.toml  Rocket.toml
server_rocket/src/: main.rs
