[build]
target = "index.html"
dist = "../dist"

[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.17"
rand = "0.8.5"
urlencoding = "2.1.2"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
getrandom = { version = "0.2", features = ["js"] }
