[build]
target = "index.html"
dist = "../dist"

[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10.1"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
urlencoding = "2.1.3"
log = "0.4.29"
yew-router = "0.20.0"
yew = { version = "0.23.0", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.68"
